k8s/kube_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot-ui-deployment
spec:
  selector:
    matchLabels:
      app: telegram-bot-ui-deployment
  template:
    metadata:
      labels:
        app: telegram-bot-ui-deployment
    spec:
      containers:
        - name: telegram-bot
          image: marolok/telegram-bot-ui:1.0.2
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: '/opt/app/temp/'
              name: tbot-data-storage
              subPath: 'tbot'
      volumes:
        - name: tbot-data-storage
          persistentVolumeClaim:
            claimName: tbot-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot-deployment
spec:
  selector:
    matchLabels:
      app: telegram-bot-deployment
  template:
    metadata:
      labels:
        app: telegram-bot-deployment
    spec:
      containers:
        - name: telegram-bot
          image: marolok/telegram_bot:2.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: '/opt/app/temp/'
              name: tbot-data-storage
              subPath: 'tbot'
      volumes:
        - name: tbot-data-storage
          persistentVolumeClaim:
            claimName: tbot-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tbotdb-deployment
spec:
  selector:
    matchLabels:
      app: tbotdb-deployment
  template:
    metadata:
      labels:
        app: tbotdb-deployment
    spec:
      containers:
        - name: telegram-db
          image: marolok/telegram_db:2.0.0
          ports:
            - containerPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /srv/www
              name: redis-storage
      volumes:
        - name: redis-storage
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  selector:
    matchLabels:
      app: zookeeper-deployment
  template:
    metadata:
      labels:
        app: zookeeper-deployment
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  selector:
    matchLabels:
      app: kafka-deployment
  template:
    metadata:
      labels:
        app: kafka-deployment
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 29092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-deployment
spec:
  selector:
    matchLabels:
      app: pgsql-deployment
  template:
    metadata:
      labels:
        app: pgsql-deployment
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: '/var/lib/postgresql/data'
              name: tbot-db-storage
              subPath: 'db'
      volumes:
        - name: tbot-db-storage
          persistentVolumeClaim:
            claimName: tbot-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tbotconf-deployment
spec:
  selector:
    matchLabels:
      app: tbotconf-deployment
  template:
    metadata:
      labels:
        app: tbotconf-deployment
    spec:
      containers:
        - name: telegram-conf
          image: marolok/telegram_conf:1.0.0
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: tbot-ui-service
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30005
  selector:
    app: telegram-bot-ui-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: tbot-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: telegram-bot-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: zk-service
spec:
  type: ClusterIP
  ports:
    - port: 22181
      targetPort: 2181
  selector:
    app: zookeeper-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
    - port: 29092
      targetPort: 29092
  selector:
    app: kafka-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service1
spec:
  type: ClusterIP
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: tbotdb-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8083
  selector:
    app: tbotdb-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: pgsql-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: tbotconf
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: tbotconf-deployment
