k8s/kube_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tbot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tbot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tbot-ui-service
                port:
                  number: 8080
